--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body{
-//background-image: url("texas.png");
-background-color: red}
+    //background-image: url("texas.png");
+    background-color: red;
+
+}
 
 
 
